- Ajustes para compatibilidade com Windows 10; - Ajustes para compatibilidade com template da ERBASE; - Alteração do repositório MAVEN.